--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveles/spanish": "^1.5",
         "rap2hpoutre/laravel-log-viewer": "^2.3"
     },
     "require-dev": {
