--- a/.env_prod
+++ b/.env_prod
@@ -1,7 +1,7 @@
 APP_NAME=Glow_Up
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:i+WCzhST9g1o1eO/vFnEyrhXNPGK6jeIz5c7Kh4VN64=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://miku.quitgamers.com.ar/
 
 LOG_CHANNEL=stack
@@ -35,7 +35,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${Glow Up}"
+MAIL_FROM_NAME="${Glow_Up}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
